# real_time_earthquake_app

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  test_onur.py  test_rabia.py
data/: depremler_hava_nasa.csv  depremler_hava_nasa_enhanced.csv  earthquakes_featured.csv  old_earthquakes.txt
deepfault/: __init__.py  agent_commentary.py  analytics.py  app.py  charts.py  config.py  data_bounds.py  features_rabia.py  footer.py  geo.py  inference.py  maps.py  mock_data.py  notifications.py  paths.py  requirements.txt  session_state.py  sidebar.py  styles.py  test_integration.py  ui_components.py
deneme/: all_earthquakes_combined.csv  api_data_collection.py  coordinate_finder.py  deneme.py  earthquakes_1600_to_2026.csv  new_api.py  old_earthquakes.py  turkey_earthquakes_1900_2026.py  weather.py  weather2.py  weather_api_merge.py
emirkan/: alert_engine.py  app.py  app_sim.py  consistency_engine.py  final_decision.py  prompt_templates.py  report_generator.py  requirements.txt  test_cases.py
onur/: OUTPUTS_onur.json  api_data_collection.py  feature_engineering.py  main_onur.py  model.py  model_deepfault_days.pkl  old_earthquake_merge.py  prediction_output.json  predictions_table_onur.csv  processed_features.csv  streamlit_onur.py
outputs/: 00_cleaned_events.csv  00_data_quality_raw_cleaned.json  01_daily_cell_panel.csv  01_panel_report.json  02_feature_engineering_report.json  02_time_series_features.csv  03_time_split_report.json  04_model_metrics.json  05_test_predictions.csv  deepfault_Rabia_TIME_SERIES_V4_BEST_FINAL_calibrated_model.joblib  deepfault_Rabia_TIME_SERIES_V4_BEST_FINAL_deployment_model.joblib
rabia/: DeepFault_Rabia_Final_HTML_Sunum.html  README.md  app_81_il.py  deepfault_Rabia_TIME_SERIES_FINAL.py  main_rabia.py
