[project]
name = "real-time-earthquake-app"
version = "0.1.0"
description = "Real-time Earthquake App"
authors = [
    { name = "Your Name", email = "", url = "" },
    { name = "Your Friend's Name", email = "", url = "" },
    { name = "Your Other Friend's Name", email = "", url = "" }
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ephem>=4.2.1",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "geopandas>=1.1.3",
    "ipython>=9.12.0",
    "lightgbm>=4.6.0",
    "missingno>=0.5.2",
    "numpy>=2.2.3",
    "optuna>=4.8.0",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "python-dotenv>=1.2.2",
    "rasterio>=1.5.0",
    "requests>=2.33.1",
    "reverse-geocoder>=1.5.1",
    "scikit-learn==1.8.0",
    "scipy-stubs~=1.17.1",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "shapely>=2.1.2",
    "st>=0.0.8",
    "statsmodels>=0.14.6",
    "streamlit>=1.56.0",
    "tqdm>=4.67.3",
    "xgboost>=3.2.0",
]
